# hodl-helper-contracts

./: .gitignore  Makefile  README.md  deployments.json  foundry.toml  print_and_clean.sh  pyproject.toml  sample.env
.github/workflows/: test.yaml
scripts/: Deploy.s.sol
src/: HODLHelperV1.sol
tests/: HODLHelperV1.t.sol
tests/mocks/: MockERC20.sol
